{
  "version": 4,
  "terraform_version": "1.2.8",
  "serial": 102,
  "lineage": "6d4c468e-9b89-a4fb-720d-69e18167049e",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da8935d913abc6e9",
            "association_id": "eipassoc-0cbe5957fcfbad912",
            "domain": "vpc",
            "id": "eipalloc-0da8935d913abc6e9",
            "network_border_group": "ap-southeast-1",
            "network_interface": "eni-0b5687b96072e656b",
            "private_dns": "ip-10-0-1-210.ap-southeast-1.compute.internal",
            "private_ip": "10.0.1.210",
            "public_dns": "ec2-54-251-181-230.ap-southeast-1.compute.amazonaws.com",
            "public_ip": "54.251.181.230",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "toppan-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:997783349296:internet-gateway/igw-08aecaaa2a8687563",
            "id": "igw-08aecaaa2a8687563",
            "owner_id": "997783349296",
            "tags": {
              "Name": "toppan-igw"
            },
            "tags_all": {
              "Name": "toppan-igw"
            },
            "vpc_id": "vpc-087a4ac759aabbc63"
          },
          "dependencies": [
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "toppan_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:997783349296:loadbalancer/app/toppanalb/6027a831ab596125",
            "arn_suffix": "app/toppanalb/6027a831ab596125",
            "desync_mitigation_mode": "defensive",
            "dns_name": "toppanalb-1557750199.ap-southeast-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:997783349296:loadbalancer/app/toppanalb/6027a831ab596125",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "toppanalb",
            "security_groups": [
              "sg-0b28665b8eda9297d"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0aa04127f2223a684"
              },
              {
                "subnet_id": "subnet-0e1a60b9ef5a37e2f"
              }
            ],
            "subnets": [
              "subnet-0aa04127f2223a684",
              "subnet-0e1a60b9ef5a37e2f"
            ],
            "vpc_id": "vpc-087a4ac759aabbc63",
            "zone_id": "Z1LMS91P8CMLE5"
          },
          "dependencies": [
            "aws_security_group.toppan_elb_sg",
            "aws_subnet.toppan-public-subnet",
            "aws_subnet.toppan-public-subnet-2",
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:997783349296:listener/app/toppanalb/6027a831ab596125/d7e14f0d5a39134d",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:997783349296:listener/app/toppanalb/6027a831ab596125/d7e14f0d5a39134d",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:997783349296:loadbalancer/app/toppanalb/6027a831ab596125",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": {},
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.toppan_alb",
            "aws_security_group.toppan_elb_sg",
            "aws_subnet.toppan-public-subnet",
            "aws_subnet.toppan-public-subnet-2",
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:997783349296:targetgroup/ALB-up-and-running/851505f27cabbd84",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:997783349296:listener-rule/app/toppanalb/6027a831ab596125/d7e14f0d5a39134d/dc5ecec501591b65",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:997783349296:listener-rule/app/toppanalb/6027a831ab596125/d7e14f0d5a39134d/dc5ecec501591b65",
            "listener_arn": "arn:aws:elasticloadbalancing:ap-southeast-1:997783349296:listener/app/toppanalb/6027a831ab596125/d7e14f0d5a39134d",
            "priority": 100,
            "tags": {},
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.toppan_alb",
            "aws_lb_listener.http",
            "aws_lb_target_group.toppan_asg",
            "aws_security_group.toppan_elb_sg",
            "aws_subnet.toppan-public-subnet",
            "aws_subnet.toppan-public-subnet-2",
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "toppan_asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:ap-southeast-1:997783349296:targetgroup/ALB-up-and-running/851505f27cabbd84",
            "arn_suffix": "targetgroup/ALB-up-and-running/851505f27cabbd84",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:ap-southeast-1:997783349296:targetgroup/ALB-up-and-running/851505f27cabbd84",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-up-and-running",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-087a4ac759aabbc63"
          },
          "dependencies": [
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0da8935d913abc6e9",
            "connectivity_type": "public",
            "id": "nat-05b3992a36c380883",
            "network_interface_id": "eni-0b5687b96072e656b",
            "private_ip": "10.0.1.210",
            "public_ip": "54.251.181.230",
            "subnet_id": "subnet-0aa04127f2223a684"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.toppan-igw",
            "aws_subnet.toppan-public-subnet",
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "toppan-private-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:997783349296:route-table/rtb-00175f0eeb30b471f",
            "id": "rtb-00175f0eeb30b471f",
            "owner_id": "997783349296",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-05b3992a36c380883",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "toppan-route-table-private-natgw"
            },
            "tags_all": {
              "Name": "toppan-route-table-private-natgw"
            },
            "timeouts": null,
            "vpc_id": "vpc-087a4ac759aabbc63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.toppan-igw",
            "aws_nat_gateway.nat-gw",
            "aws_subnet.toppan-public-subnet",
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "toppan-public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:997783349296:route-table/rtb-0052c85ef9f267b81",
            "id": "rtb-0052c85ef9f267b81",
            "owner_id": "997783349296",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08aecaaa2a8687563",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "toppan-route-table-public-igw"
            },
            "tags_all": {
              "Name": "toppan-route-table-public-igw"
            },
            "timeouts": null,
            "vpc_id": "vpc-087a4ac759aabbc63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.toppan-igw",
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "toppan_assignment_vpc_private_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-045928c8efc693667",
            "route_table_id": "rtb-00175f0eeb30b471f",
            "subnet_id": "subnet-03ca9ed8479591e24"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.toppan-igw",
            "aws_nat_gateway.nat-gw",
            "aws_route_table.toppan-private-route-table",
            "aws_subnet.toppan-private-subnet",
            "aws_subnet.toppan-public-subnet",
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "toppan_assignment_vpc_public_route_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e98fbfd5a23b8b2d",
            "route_table_id": "rtb-0052c85ef9f267b81",
            "subnet_id": "subnet-0aa04127f2223a684"
          },
          "dependencies": [
            "aws_internet_gateway.toppan-igw",
            "aws_route_table.toppan-public-route-table",
            "aws_subnet.toppan-public-subnet",
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "toppan_assignment_vpc_public_route_association-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0898c241e4da177e1",
            "route_table_id": "rtb-0052c85ef9f267b81",
            "subnet_id": "subnet-0e1a60b9ef5a37e2f"
          },
          "dependencies": [
            "aws_internet_gateway.toppan-igw",
            "aws_route_table.toppan-public-route-table",
            "aws_subnet.toppan-public-subnet-2",
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "toppan_elb_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:997783349296:security-group/sg-0b28665b8eda9297d",
            "description": "allow 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0b28665b8eda9297d",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "toppan_elb_sg",
            "name_prefix": "",
            "owner_id": "997783349296",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-087a4ac759aabbc63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "toppan_elb_sg_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:997783349296:security-group/sg-030029403a058148a",
            "description": "allow 80",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-030029403a058148a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "toppan_elb_sg_ec2",
            "name_prefix": "",
            "owner_id": "997783349296",
            "revoke_rules_on_delete": false,
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-087a4ac759aabbc63"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "toppan-private-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:997783349296:subnet/subnet-03ca9ed8479591e24",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03ca9ed8479591e24",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "997783349296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "toppan-private-subnet"
            },
            "tags_all": {
              "Name": "toppan-private-subnet"
            },
            "vpc_id": "vpc-087a4ac759aabbc63"
          },
          "dependencies": [
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "toppan-public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:997783349296:subnet/subnet-0aa04127f2223a684",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1a",
            "availability_zone_id": "apse1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0aa04127f2223a684",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "997783349296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "toppan-public-subnet"
            },
            "tags_all": {
              "Name": "toppan-public-subnet"
            },
            "vpc_id": "vpc-087a4ac759aabbc63"
          },
          "dependencies": [
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "toppan-public-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:997783349296:subnet/subnet-0e1a60b9ef5a37e2f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-southeast-1b",
            "availability_zone_id": "apse1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e1a60b9ef5a37e2f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "997783349296",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "toppan-public-subnet-2"
            },
            "tags_all": {
              "Name": "toppan-public-subnet-2"
            },
            "vpc_id": "vpc-087a4ac759aabbc63"
          },
          "dependencies": [
            "aws_vpc.toppan-assignment-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "toppan-assignment-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-southeast-1:997783349296:vpc/vpc-087a4ac759aabbc63",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-00848ffa9aa262bf8",
            "default_route_table_id": "rtb-0df6c8125ad601db0",
            "default_security_group_id": "sg-0623f63a2062577ed",
            "dhcp_options_id": "dopt-08b1dc8b7c71e3543",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-087a4ac759aabbc63",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0df6c8125ad601db0",
            "owner_id": "997783349296",
            "tags": {
              "Name": "toppan_assignment_vpc"
            },
            "tags_all": {
              "Name": "toppan_assignment_vpc"
            }
          }
        }
      ]
    }
  ]
}